2013-10-09  Alexey Proskuryakov  <ap@apple.com>

        http://build.webkit.org/dashboard/ links to a wrong jscore-test results page
        https://bugs.webkit.org/show_bug.cgi?id=122569

        Reviewed by Tim Hatcher.

        * BuildSlaveSupport/build.webkit.org-config/public_html/dashboard/Scripts/WebKitBuildbot.js:
        (WebKitBuildbot.prototype.javascriptTestResultsURLForIteration): "actual.html" used
        to be produced by the old Mozilla test harness that we don't use any more.

2013-10-09  Gustavo Noronha Silva  <gustavo.noronha@collabora.com>

        Add GTK 64 bits release to the buildbot dashboard
        https://bugs.webkit.org/show_bug.cgi?id=122548

        Reviewed by Darin Adler.

        * BuildSlaveSupport/build.webkit.org-config/public_html/dashboard/Images/GTK.png: Added.
        * BuildSlaveSupport/build.webkit.org-config/public_html/dashboard/Scripts/WebKitBuildbot.js:
        (WebKitBuildbot): add 64 bits release wk2 and wk1 testers.
        * BuildSlaveSupport/build.webkit.org-config/public_html/dashboard/Styles/Main.css:
        (table.queue-grid tr.platform.linux-gtk img.logo): use the GTK+ logo in its dashboard line.

2013-10-09  Mario Sanchez Prada  <mario.prada@samsung.com>

        [ATK] Implement new API in AtkText: atk_text_get_string_at_offset()
        https://bugs.webkit.org/show_bug.cgi?id=120638

        Reviewed by Gustavo Noronha Silva.

        * gtk/jhbuild.modules: Raised ATK and AT-SPI versions to 2.10.0, so we
        can check both the old and new APIs to retrieve text at a given offset.

2013-10-08  Alex Christensen  <achristensen@webkit.org>

        Improved WinLauncher.
        https://bugs.webkit.org/show_bug.cgi?id=122536

        Reviewed by Brent Fulgham.

        * WinLauncher/PrintWebUIDelegate.cpp:
        (PrintWebUIDelegate::runJavaScriptAlertPanelWithMessage): Added.
        (PrintWebUIDelegate::runJavaScriptConfirmPanelWithMessage): Added.