@@ -85,7 +85,7 @@ BuildbotIteration.prototype = {
 
             var testResults = {};
 
-            if (!("isFinished" in testStep)) {
+            if (!testStep.isFinished) {
                 // The step never even ran, or hasn't finish running.
                 testResults.finished = false;
                 return testResults;
@@ -93,7 +93,7 @@ BuildbotIteration.prototype = {
 
             testResults.finished = true;
 
-            if (!("results" in testStep) || !testStep.results[0]) {
+            if (!testStep.results || !testStep.results[0]) {
                 // All tests passed.
                 testResults.allPassed = true;
                 return testResults;
@@ -140,35 +140,23 @@ BuildbotIteration.prototype = {
             var internalRevisionProperty = data.properties.findFirst(function(property) { return property[0] === "internal_got_revision"; });
             this.internalRevision = internalRevisionProperty ? parseInt(internalRevisionProperty[1], 10) : null;
 
-            if (!this.layoutTestResults || !this.layoutTestResults.finished) {
-                var layoutTestResults = collectTestResults.call(this, data, "layout-test");
-                this.layoutTestResults = layoutTestResults ? new BuildbotTestResults(this, layoutTestResults) : null;
-            }
+            var layoutTestResults = collectTestResults.call(this, data, "layout-test");
+            this.layoutTestResults = layoutTestResults ? new BuildbotTestResults(this, layoutTestResults) : null;
 
-            if (!this.javascriptTestResults || !this.javascriptTestResults.finished) {
-                var javascriptTestResults = collectTestResults.call(this, data, "jscore-test");
-                this.javascriptTestResults = javascriptTestResults ? new BuildbotTestResults(this, javascriptTestResults) : null;
-            }
+            var javascriptTestResults = collectTestResults.call(this, data, "jscore-test");
+            this.javascriptTestResults = javascriptTestResults ? new BuildbotTestResults(this, javascriptTestResults) : null;
 
-            if (!this.apiTestResults || !this.apiTestResults.finished) {
-                var apiTestResults = collectTestResults.call(this, data, "run-api-tests");
-                this.apiTestResults = apiTestResults ? new BuildbotTestResults(this, apiTestResults) : null;
-            }
+            var apiTestResults = collectTestResults.call(this, data, "run-api-tests");
+            this.apiTestResults = apiTestResults ? new BuildbotTestResults(this, apiTestResults) : null;
 
-            if (!this.pythonTestResults || !this.pythonTestResults.finished) {
-                var pythonTestResults = collectTestResults.call(this, data, "webkitpy-test");
-                this.pythonTestResults = pythonTestResults ? new BuildbotTestResults(this, pythonTestResults) : null;
-            }
+            var pythonTestResults = collectTestResults.call(this, data, "webkitpy-test");
+            this.pythonTestResults = pythonTestResults ? new BuildbotTestResults(this, pythonTestResults) : null;
 
-            if (!this.perlTestResults || !this.perlTestResults.finished) {
-                var perlTestResults = collectTestResults.call(this, data, "webkitperl-test");
-                this.perlTestResults = perlTestResults ? new BuildbotTestResults(this, perlTestResults) : null;
-            }
+            var perlTestResults = collectTestResults.call(this, data, "webkitperl-test");
+            this.perlTestResults = perlTestResults ? new BuildbotTestResults(this, perlTestResults) : null;
 
-            if (!this.bindingTestResults || !this.bindingTestResults.finished) {
-                var bindingTestResults = collectTestResults.call(this, data, "bindings-generation-tests");
-                this.bindingTestResults = bindingTestResults ? new BuildbotTestResults(this, bindingTestResults) : null;
-            }
+            var bindingTestResults = collectTestResults.call(this, data, "bindings-generation-tests");
+            this.bindingTestResults = bindingTestResults ? new BuildbotTestResults(this, bindingTestResults) : null;
 
             this.loaded = true;
 
